        - Some useless extra runs have been removed.
    # Apps :
        * Documents :
            - You could merge system folders & so, remove them.
        * Emails :
            - There were some issues when the default owner of synchronised emails is a team.
            - A crash when accepting a synchronized email with attachments has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The class 'creme_core.creme_jobs.base.JobType' gets a new attribute: configurable.
          If you set it to 'False', the related job cannot be edited & the value of "enabled" cannot be changed.
        # Javascript:
            * FormDialog:
                - Form submit error responses with HTML can either replace the default overlay content or the frame content.
                - New creme.dialog.Frame option 'fillOnError'; if enabled the html error response replaces the content.
                - New creme.dialog.Dialog option 'fillFrameOnError'; if enabled the html error response replaces the content.


== Version 2.5.12 ==

  Users side :
  ------------
    # The confirmation message for definitive deletion in hat-bar brick has been fixed.
    # Apps :
        * Billing :
            - The layout of the TemplateBase detail-views has been fixed.
            - The inner-edition of TemplateBase instances bas been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # A crash when a function is used for default value of an enumerable FK has been fixed.


== Version 2.5.11 ==

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
    # Apps :
        * Emails :
            - In email synchronisation:
                - There was an error when accepting a fixed forwarded email.
                - The display of error, when using single actions (accept & delete), has been fixed.
